[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "https://docs.rs/num-complex"
homepage = "https://github.com/rust-num/num-complex"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT/Apache-2.0"
name = "num-complex"
repository = "https://github.com/rust-num/num-complex"
version = "0.2.3"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml"]

[package.metadata.docs.rs]
features = ["std", "serde", "rand"]

[dependencies]

[dependencies.num-traits]
version = "0.2.7"
default-features = false

[dependencies.serde]
optional = true
version = "1.0"
default-features = false

[dependencies.rand]
optional = true
version = "0.5"
default-features = false

[features]
default = ["std"]
i128 = ["num-traits/i128"]
std = ["num-traits/std"]

[build-dependencies]
autocfg = "0.1.3"
