[package]
authors = ["The Rust Project Developers"]
description = "Complex numbers implementation for Rust"
documentation = "https://docs.rs/num-complex"
homepage = "https://github.com/rust-num/num-complex"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "data-structures", "science", "no-std"]
license = "MIT OR Apache-2.0"
name = "num-complex"
repository = "https://github.com/rust-num/num-complex"
version = "0.4.0"
readme = "README.md"
exclude = ["/bors.toml", "/ci/*", "/.github/*"]
edition = "2018"

[package.metadata.docs.rs]
features = ["std", "serde", "rand"]

[dependencies]

[dependencies.num-traits]
version = "0.2.11"
default-features = false
features = ["i128"]

[dependencies.serde]
optional = true
version = "1.0"
default-features = false

[dependencies.rand]
optional = true
version = "0.8"
default-features = false

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["num-traits/libm"]
